--- a/src/components/export/styleFile.css
+++ b/src/components/export/styleFile.css
@@ -1,3 +1,108 @@
-body{
+.export {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.file-container{
+    width: 600px;
+    height: 840px;
+    border: 40px solid #fff;
+}
+.file {
     background-color: #fff;
+    width: 100%;
+    height: 100%;
+}
+.exp_actions{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+.exp_date{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+.exp_date span{
+    font-weight: 600;
+}
+.exp_actions select option{
+    font-size: 20px;
+}
+.exp_actions select{
+    
+    width: 114px;
+}
+.exp_header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.exp_header p {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.exp_header .exp_img {
+    width: 43px;
+    height: 43px;
+}
+
+.exp_header .title {
+    width: auto;
+    font-size: 14px;
+}
+
+.exp_title {
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.exp_objectife {
+    height: 400px;
+    max-height: 400px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+.exp_objectife h5{
+    font-size: 20px;
+}
+
+.exp_footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.exp_footer span {
+    font-size: 14px;
+}
+
+.exp_signiature span{
+    font-size: 20px;
+    font-weight: 600;
+}
+.danger-btn{
+    background-color: #ff3232;
+    color: white;
+}
+.danger-btn:focus{
+    box-shadow: 0 0 0 3px #ff323271;
+}
+.flex-font-arabic{
+    display: flex;
+    width: 100%;
 }
