--- a/src/style/style.css
+++ b/src/style/style.css
@@ -37,7 +37,7 @@ body{
 
 
 .container {
-    background: #272727;
+    background-color: #272727;
     width: 100%;
     height: 200vh;
 }
@@ -61,13 +61,16 @@ body{
     width: 20%;
     position: relative;
 }
-
-.ellipsis:before {
+.ellipsis-sm{
+    width: 4%;
+    position: relative;
+}
+.ellipsis:before, .ellipsis-sm:before{
     content: ' ';
     visibility: hidden;
 }
 
-.ellipsis p {
+.ellipsis p , .ellipsis-sm p {
     position: absolute;
     left: 0;
     right: 0;
@@ -90,7 +93,7 @@ body{
     text-align: center;
 }
 
-.table tr:nth-child(1n + 3):hover {
+.table tr:nth-child(n + 4):hover {
     background-color: #d4d4d4;
 }
 
@@ -115,6 +118,7 @@ body{
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
+    padding-top: 20px;
 }
 
 
@@ -130,36 +134,26 @@ body{
 }
 .left-side h5{
     cursor: context-menu;
-}
-.search-bar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+    font-size: 16px;
 }
 
-.search {
-    width: 500px;
-    padding: 10px;
-    border-radius: 0 5px 5px 0;
-    background-color: #ffffff31;
+.input_search{
+    width: 250px;
     outline: none;
     border: none;
-    color: #fff;
+    background-color: #ffffff;
+    padding: 10px;
+    border-radius: 5px;
+    margin: 0 20px 0 0;
 }
-
-.search::placeholder {
-    font-weight: 700;
+.header_controle{
+    display: flex;
+    justify-content: space-between;
 }
-
-.logo-search {
-    background-color: #ffffff31;
-    padding: 11px;
-    font-size: 20px;
-    border-radius: 5px 0 0 5px;
-    cursor: pointer;
+.header_controle_single{
+    display: flex;
+    justify-content: flex-end;
 }
-
-
 .right-side {
     display: flex;
     flex-direction: row;
@@ -167,16 +161,20 @@ body{
     gap: 15px;
 }
 
-
-
-
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 200px calc(100% - 285px));
     height: calc(100vh - 70px);
     gap: 5px;
 }
-
+.error_message{
+    height: 40px;
+    padding: 10px;
+    background-color: #ed4646;
+    border-radius: 5px;
+    width: 100%;
+    color: #ffffff;
+}
 .left-bar {
     display: flex;
     flex-direction: column;
@@ -246,23 +244,18 @@ body{
 
 
 .form-container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    place-items: left;
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
+    column-gap: 100px;
     margin: 20px;
 }
-
-.form-container h1 {
+.form-edit h1{
     color: #fff;
-    grid-column: 1/3;
-    grid-row: 2/3;
-    text-align: center;
 }
 
 .form-controle {
-    grid-column: 1/2;
-    width: 400px;
+    width: 510px;
     display: flex;
     flex-direction: column;
     margin-right: 100px;
@@ -311,7 +304,7 @@ body{
 .form .form-controle input:focus,
 .btn:focus,
 .form-controle-flex input:focus {
-    box-shadow: 0 0 0 3px #3f86ff9c;
+    box-shadow: 0 0 0 3px #3f85ff84;
 }
 
 .form-container .childe-2 {
@@ -408,7 +401,7 @@ body{
     flex-direction: row;
     font-size: 14px;
     font-weight: 600;
-    padding: 10px 10px 10px 50px;
+    padding: 10px 50px 10px 50px;
     border-bottom: 2px solid #989898;
 }
 
@@ -448,9 +441,8 @@ body{
 
 .profile-add-img::-webkit-file-upload-button {
     padding: 10px;
-    font-size: 12px;
-    font-weight: 600;
-    color: #767676;
+    font-size: 15px;
+    color: #00000059;
     background-color: transparent;
     border-radius: 5px;
     border: 1px solid #272727;
@@ -465,23 +457,25 @@ body{
 
 .btn-add-image {
     padding: 10px;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 600;
+    width: 130px;
     color: #767676;
     background-color: transparent;
     border-radius: 5px;
-    border: 1px solid #5e5e5e;
+    border: 1px solid #4690ff84;
     outline: none;
     cursor: pointer;
     transition: 0.3s;
     margin-top: 10px;
 }
 .btn-add-image:hover{
-    box-shadow: 0 0 0 2px #4690ff84;
-    color: #272727;
+    box-shadow: 0 0 0 3px #4690ff84;
+    color: #ffffff;
+    background-color: #204de2;
 }
 .profile-add-img {
-color: #272727;
+    color: #272727;
     font-size: 15px;
 }
 .profile-info-text{
@@ -603,7 +597,38 @@ color: #272727;
     border-radius: 5px;
     font-size: 15px;
 }
+.message_err{
+    margin-top: 5px;
+    height:50px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    color: #ffffff;
+    font-size: 20px;
+}
+.err_text{
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    height: 20px;
+}
 
 .object-controle .object:focus {
     box-shadow: 0 0 0 3px #2986fff1;
+}
+.list_pagination{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: center;
+}
+.list_pagination li{
+    list-style: none;
+}
+.list_pagination .icon_pagination{
+    color: #000000;
+    font-size: 25px;
+    cursor: pointer;
 }
