--- a/src/style/style.css
+++ b/src/style/style.css
@@ -8,10 +8,70 @@
     -moz-osx-font-smoothing: grayscale;
     transition: 0.2s;
 }
-body{
-    background: #272727;
+
+:root {
+    --light: #f6f6f6;
+    --dark-gray: #202020;
+    --primary: #1465df;
+    --danger: #fa4141;
+}
+
+body {
+    background: var(--light);
     overflow: hidden;
 }
+
+.header_profile {
+    border-bottom: 1px solid #afafaf;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    height: auto;
+}
+
+.header_profile span {
+    padding: 0 0 10px 0;
+}
+
+.header_profile .title_profile {
+    border-bottom: #4186ec 2px solid;
+    font-size: 21px;
+    color: #4186ec;
+    font-weight: 500;
+}
+
+.header_profile .deconnection_profile {
+    color: #f04242;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.avatar_profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 10px;
+    width: 100%;
+    justify-content: center;
+
+}
+
+.avatar_profile .fullname {
+    height: 30px;
+    font-size: 25px;
+}
+
+.deconnection_profile span {
+    font-size: 19px;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
+
 .errPage {
     display: flex;
     align-items: center;
@@ -19,7 +79,25 @@ body{
     flex-direction: column;
     height: 100vh;
     line-height: 70px;
-    color: #fafafa;
+    color: var(--light);
+}
+.exp_objectife span{
+    width: auto;
+}
+.exp_objectife{
+    overflow-wrap: break-word;
+}
+.header_tab {
+    width: 100%;
+    display: flex;
+    justify-content: end;
+}
+
+.title_header {
+    color: var(--primary);
+    font-size: 17px;
+    padding-right: 40px;
+    font-weight: 500;
 }
 
 .errPage .errIcon {
@@ -37,9 +115,14 @@ body{
 
 
 .container {
-    background-color: #272727;
+    background-color: var(--light);
     width: 100%;
     height: 200vh;
+}
+
+.table_container {
+    grid-column: 1/4;
+    margin: 0 140px 0 40px;
 }
 
 .table {
@@ -61,16 +144,20 @@ body{
     width: 20%;
     position: relative;
 }
-.ellipsis-sm{
+
+.ellipsis-sm {
     width: 4%;
     position: relative;
 }
-.ellipsis:before, .ellipsis-sm:before{
+
+.ellipsis:before,
+.ellipsis-sm:before {
     content: ' ';
     visibility: hidden;
 }
 
-.ellipsis p , .ellipsis-sm p {
+.ellipsis p,
+.ellipsis-sm p {
     position: absolute;
     left: 0;
     right: 0;
@@ -81,7 +168,15 @@ body{
     text-overflow: ellipsis;
 }
 
-
+.profile_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 40px;
+    row-gap: 60px;
+    flex-wrap: wrap;
+    width: 100%;
+}
 
 .table tr {
     background-color: #b9b9b9;
@@ -116,9 +211,10 @@ body{
     background-color: transparent;
     color: #fff;
     display: flex;
+    padding: 10px;
     justify-content: space-between;
-    padding: 10px 20px;
-    padding-top: 20px;
+    flex-direction: row;
+    align-items: center;
 }
 
 
@@ -126,18 +222,13 @@ body{
     width: 30px;
 }
 
-.left-side {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 40px;
-}
-.left-side h5{
-    cursor: context-menu;
-    font-size: 16px;
+.links {
+    text-decoration: none;
+    color: var(--dark-gray);
 }
 
-.input_search{
+
+.input_search {
     width: 250px;
     outline: none;
     border: none;
@@ -146,14 +237,17 @@ body{
     border-radius: 5px;
     margin: 0 20px 0 0;
 }
-.header_controle{
+
+.header_controle {
     display: flex;
     justify-content: space-between;
 }
-.header_controle_single{
+
+.header_controle_single {
     display: flex;
     justify-content: flex-end;
 }
+
 .right-side {
     display: flex;
     flex-direction: row;
@@ -167,7 +261,8 @@ body{
     height: calc(100vh - 70px);
     gap: 5px;
 }
-.error_message{
+
+.error_message {
     height: 40px;
     padding: 10px;
     background-color: #ed4646;
@@ -175,6 +270,7 @@ body{
     width: 100%;
     color: #ffffff;
 }
+
 .left-bar {
     display: flex;
     flex-direction: column;
@@ -222,9 +318,11 @@ body{
     font-size: 13px;
     margin-right: 5px;
 }
-.menu{
+
+.menu {
     margin-top: 10px;
 }
+
 .logo-profile {
     font-size: 25px;
     color: #fff;
@@ -232,7 +330,7 @@ body{
     display: inline-block;
 }
 
-.border-avatar-upload{
+.border-avatar-upload {
     border-radius: 100%;
     width: 200px;
     height: 200px;
@@ -250,7 +348,8 @@ body{
     column-gap: 100px;
     margin: 20px;
 }
-.form-edit h1{
+
+.form-edit h1 {
     color: #fff;
 }
 
@@ -277,7 +376,7 @@ body{
 
 .message-controle .message {
     background-color: #2bff44ba;
-    color: #fafafa;
+    color: var(--light);
     font-size: 20px;
     border-radius: 5px;
     padding: 20px;
@@ -336,17 +435,19 @@ body{
     font-weight: 500;
     margin-top: 10px;
     background-color: #ffffff;
-    color: #272727;
+    color: var(--dark-gray);
     outline: none;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
-.dark-btn{
-    background-color: #272727;
+
+.dark-btn {
+    background-color: var(--dark-gray);
     color: #fff;
-    
+
 }
+
 .selector {
     width: 100%;
     padding: 10px;
@@ -354,13 +455,15 @@ body{
     outline: none;
     border: none;
 }
-.selector option{
+
+.selector option {
     font-size: 17px;
-    background-color: #272727;
+    background-color: var(--dark-gray);
     color: #fff;
     outline: none;
     border: none;
 }
+
 .selector-flex {
     width: 51vw;
     padding: 10px;
@@ -379,10 +482,10 @@ body{
 }
 
 .profile-container {
+    grid-column: 1/3;
     display: flex;
     flex-direction: column;
-    margin: 20px;
-    padding: 50px 200px 0px 200px;
+    padding: 10px 200px 0px 200px;
     gap: 9px;
     width: 100%;
 }
@@ -445,14 +548,14 @@ body{
     color: #00000059;
     background-color: transparent;
     border-radius: 5px;
-    border: 1px solid #272727;
+    border: 1px solid var(--dark-gray);
     outline: none;
     cursor: pointer;
     transition: 0.3s;
 }
 
 .profile-add-img::-webkit-file-upload-button:hover {
-    color: #272727;
+    color: var(--dark-gray);
 }
 
 .btn-add-image {
@@ -469,27 +572,31 @@ body{
     transition: 0.3s;
     margin-top: 10px;
 }
-.btn-add-image:hover{
+
+.btn-add-image:hover {
     box-shadow: 0 0 0 3px #4690ff84;
     color: #ffffff;
     background-color: #204de2;
 }
+
 .profile-add-img {
-    color: #272727;
+    color: var(--dark-gray);
     font-size: 15px;
 }
-.profile-info-text{
+
+.profile-info-text {
     font-weight: 600;
     font-size: 15px;
     margin-top: 7px;
-    color: #272727;
+    color: var(--dark-gray);
 }
+
 .container-login {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: linear-gradient(-195deg, #fafafa, #d9d9d9);
+    background: linear-gradient(-195deg, var(--light), #d9d9d9);
 }
 
 .profile-info-img {
@@ -506,12 +613,15 @@ body{
     align-items: center;
     justify-content: center;
 }
+
 .img .pi-user:before {
     font-size: 80px;
 }
-.p-avatar img{
-    object-fit: cover; 
+
+.p-avatar img {
+    object-fit: cover;
 }
+
 .container-login .container-form {
     width: 800px;
     height: 400px;
@@ -549,7 +659,7 @@ body{
 }
 
 .contexte-login {
-    background-color: #272727;
+    background-color: var(--dark-gray);
     border-radius: 0 10px 10px 0;
     width: 40%;
     display: flex;
@@ -570,7 +680,7 @@ body{
 
 .edit-icon {
     text-decoration: none;
-    color: #272727;
+    color: var(--dark-gray);
     font-size: 16px;
     cursor: pointer;
 }
@@ -597,9 +707,10 @@ body{
     border-radius: 5px;
     font-size: 15px;
 }
-.message_err{
+
+.message_err {
     margin-top: 5px;
-    height:50px;
+    height: 50px;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -608,7 +719,8 @@ body{
     color: #ffffff;
     font-size: 20px;
 }
-.err_text{
+
+.err_text {
     display: flex;
     align-items: center;
     font-size: 14px;
@@ -618,16 +730,19 @@ body{
 .object-controle .object:focus {
     box-shadow: 0 0 0 3px #2986fff1;
 }
-.list_pagination{
+
+.list_pagination {
     display: flex;
     flex-direction: row;
     gap: 50px;
     justify-content: center;
 }
-.list_pagination li{
+
+.list_pagination li {
     list-style: none;
 }
-.list_pagination .icon_pagination{
+
+.list_pagination .icon_pagination {
     color: #000000;
     font-size: 25px;
     cursor: pointer;
