--- a/src/style/style.css
+++ b/src/style/style.css
@@ -77,9 +77,8 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 100vh;
-    line-height: 70px;
-    color: var(--light);
+    height: 90vh;
+    color: var(--dark-gray);
 }
 .exp_objectife span{
     width: auto;
@@ -208,13 +207,14 @@ body {
 }
 
 .navbar {
-    background-color: transparent;
+    background-color: var(--dark-gray);
     color: #fff;
     display: flex;
     padding: 10px;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 6px;
 }
 
 
